syntax = "proto3";

option java_package = "rbento.api.v1";

message CommandRequest {
	string statement = 1;
}

message CommandResponse {
	int32 code = 1;
	string result = 2;
}

service Terminal {
	rpc executeCommand (CommandRequest) returns (CommandResponse);
}
